apps/expense-api/base/namespace.yaml
---
# ============================================================
# demok8s / apps/expense-api/base/namespace.yaml
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: expense-api
  labels:
    kubernetes.io/metadata.name: expense-api
    app.kubernetes.io/name: expense-api
    managed-by: argocd
