apps/expense-api/base/service.yaml
---
# ============================================================
# demok8s / apps/expense-api/base/service.yaml
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: expense-api-service
  namespace: expense-api
  labels:
    app.kubernetes.io/name: expense-api
spec:
  selector:
    app.kubernetes.io/name: expense-api
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
